than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

155125  avoid cutting away file:lineno after long function name
211926  Avoid compilation warnings in valgrind.h with -pedantic
269360  s390x: Fix addressing mode selection for compare-and-swap
333051  mmap of huge pages fails due to incorrect alignment
        == 339163
334802  valgrind does not always explain why a given option is bad
335440  arm64: ld1 (single structure) is not implemented
335713  arm64: unhanded instruction: prfm (immediate)
338731  ppc: Fix testuite build for toolchains not supporting -maltivec
338995  shmat with hugepages (SHM_HUGETLB) fails with EINVAL
339020  ppc64: memcheck/tests/ppc64/power_ISA2_05 failing in nightly build
339045  Getting valgrind to compile and run on OS X Yosemite (10.10)
        == 340252
339156  gdbsrv not called for fatal signal
339182  ppc64: AvSplat ought to load destination vector register with 16/16
        bytes stored prior
339336  PPC64 store quad instruction (stq) is not supposed to
        change the address register contents
339433  ppc64 lxvw4x instruction uses four 32-byte loads
339442  Fix testsuite build failure on OS X 10.9
339645  Use correct tag names in sys_getdents/64 wrappers
339688  Mac-specific ASM does not support .version directive (cpuid,
        tronical and pushfpopf tests)
339706  Fix false positive for ioctl(TIOCSIG) on linux
339721  assertion 'check_sibling == sibling' failed in readdwarf3.c ...
339789  Fix none/tests/execve test on Mac OS X 10.9
339808  Fix none/tests/rlimit64_nofile test on Mac OS X 10.9
339853  arm64 times syscall unknown
339855  arm64 unhandled getsid/setsid syscalls
339858  arm64 dmb sy not implemented
339926  Unhandled instruction 0x1E674001 (frintx) on aarm64